Fixes dark mode colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,10 +4,14 @@
 
 @plugin '@tailwindcss/typography';
 
+:root {
+  color-scheme: light dark;
+}
+
 @theme {
-  --color-primary: #5961df;
+  --color-primary: light-dark(#5961df, #8c91d8);
   --color-pink: #ec6ead;
-  --color-yellow: #fcff9e; /* TODO: what about light mode? */
+  --color-yellow: #fcff9e;
   --animate-rainbow-text: rainbow-text 3s ease infinite;
 
   @keyframes rainbow-text {
